<resources>
    <string name="app_name">E-KOST KARAWANG</string>
    <string name="beranda">Beranda</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="pesan">Pesan</string>
    <string name="profil">Profil</string>
    <string name="masukkan_nomor_telepon_disini">Masukkan Nomor Telepon disini :</string>
    <string name="Pesanan_Saya">Pesanan Saya</string>
    <string name="Pesan_Saya">Pesan Saya</string>
    <string name="lokasi_terdekat_atau_nama_kost">Lokasi terdekat atau nama Kost</string>
    <string name="cari_kost">CARI KOST</string>
    <string name="lihat_kost_terdekat_dari">Lihat Kost Terdekat dari :</string>
    <string name="kiic">KIIC</string>
    <string name="surya_cipta">Surya Cipta</string>
    <string name="mitra_karawang">Mitra Karawang</string>
    <string name="pesanan_kosong">Pesanan Kosong</string>
    <string name="pesan_kosong">Pesan Kosong</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ekostkarawang_gmail_com">ekostkarawang@gmail.com</string>
    <string name="masuk_daftar">MASUK / DAFTAR</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="_62_8588_7762_973">+62 8588 7762 973</string>
    <string name="keluar">Keluar</string>
    <string name="kelola_kost">KELOLA KOST</string>
    <string name="Buka_dengan_">Buka dengan :</string>
    <string name="Tunggu_Sebentar_">Tunggu Sebentar&#8230;</string>
    <string name="masuk_sebagai">Masuk sebagai?</string>
    <string name="pilih_salah_satu">Pilih salah satu</string>
    <string name="pencari_kost">Pencari Kost</string>
    <string name="pemilik_kost">Pemilik Kost</string>
    <string name="mendaftar_pemilik_kost">Mendaftar - Pemilik Kost</string>
    <string name="gunakan_nomor_telepon">Gunakan nomor telepon</string>
    <string name="lanjutkan_dengan_google">Lanjutkan dengan Google</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="mendaftar_pencari_kost">Mendaftar - Pencari Kost</string>
    <string name="yakin_keluar_akun">Yakin Keluar Akun ?</string>
    <string name="batal">Batal</string>
    <string name="ya">Ya</string>
    <string name="_62">+62</string>
    <string name="xxx_xxxx_xxxx">xxx-xxxx-xxxx</string>
    <string name="kirim">KIRIM</string>
    <string name="underscore">_ _ _ _ _ _</string>
    <string name="_01_00">01:00</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="jenis_kelamin">Jenis kelamin :</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="simpan_profil">SIMPAN PROFIL</string>
    <string name="Masukkan_OTP_yang_telah_dikirimkan_">Masukkan OTP yang telah dikirimkan :</string>
    <string name="Kirim_Ulang">Kirim Ulang</string>
    <string name="Lengkapi_data_berikut_">Lengkapi data berikut :</string>
    <string name="Wajib_di_isi_">Wajib di isi !</string>
    <string name="Email_tidak_benar_">Email tidak benar !</string>
    <string name="Minimal_6_karakter_">Minimal 6 karakter !</string>
    <string name="Password_tidak_sama_">Password tidak sama !</string>
    <string name="Menyimpan_Data_">Menyimpan Data&#8230;</string>
    <string name="Gagal_Menyimpan_">Gagal Menyimpan !</string>
    <string name="Nomor_Telepon_sudah_digunakan">Nomor Telepon sudah digunakan</string>
    <string name="Verifikasi_Akun">Verifikasi Akun</string>
    <string name="Akun_Anda_belum_di_verifikasi">Akun Anda Belum di verifikasi</string>
    <string name="Verifikasi_Sekarang">Verifikasi Sekarang ?</string>
    <string name="TIDAK">TIDAK</string>
    <string name="YA">YA</string>
    <string name="lengkapi_data_diri_anda_berikut">Lengkapi data diri Anda berikut :</string>
    <string name="unggah_foto_kartu_identitas">Unggah Foto Kartu Identitas</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="unggah_foto_diri">Unggah Foto diri</string>
    <string name="petunjuk_dalam_unggah_foto">Petunjuk dalam Unggah Foto :</string>
    <string name="list_petunjuk">
        <li>Unggah Foto Kartu Identitas dengan jelas dan tidak terpotong.</li>\n
        <li>Foto diri dengan mengunggah foto wajah terlihat dan tidak buram.</li>
    </string>
    <string name="dengan_ini_saya_menyatakan_bahwa_data_diri_yang_saya_berikan_adalah_benar">Dengan ini saya menyatakan bahwa data diri yang saya berikan adalah benar.</string>
    <string name="unggah_data_diri">UNGGAH DATA DIRI</string>
    <string name="Akun_Anda_Sedang_di_Verifikasi">Akun Anda Sedang di Verifikasi</string>
    <string name="Mohon_untuk_Menunggu">Mohon untuk Menunggu</string>
    <string name="ok">OK</string>
    <string name="Mengunggah_Gambar_">Mengunggah Gambar&#8230;</string>
    <string name="Mengunggah_data_diri">"Mengunggah data diri"</string>
    <string name="Berhasil_Mengunggah_Data_Diri">Berhasil Mengunggah Data Diri</string>
    <string name="Admin">" (Admin)"</string>
    <string name="Kelola_Kost">Kelola Kost</string>
    <string name="lengkapi_data_kost_milik_anda">Lengkapi Data Kost Milik Anda :</string>
    <string name="nama_kostan">Nama Kost</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="desa_atau_kelurahan">Desa atau Kelurahan</string>
    <string name="alamat_kost_lengkap">Alamat Kost Lengkap</string>
    <string name="fasilitas_bersama">Fasilitas Bersama</string>
    <string name="wifi">Wifi</string>
    <string name="cctv">CCTV</string>
    <string name="jemuran">Jemuran</string>
    <string name="laundry">Laundry</string>
    <string name="parkir_motor">Parkir Motor</string>
    <string name="parkir_mobil">Parkir Mobil</string>
    <string name="sumber_air_tanah">Sumber Air Tanah</string>
    <string name="sumber_air_pam">Sumber Air PAM</string>
    <string name="ruang_bersama">Ruang Bersama</string>
    <string name="dapur_atau_pantry">Dapur atau Pantry</string>
    <string name="televisi">Televisi</string>
    <string name="kulkas">Kulkas</string>
    <string name="keamanan">Keamanan</string>
    <string name="dispenser">Dispenser</string>
    <string name="kamar_mandi_dalam">Kamar Mandi Dalam</string>
    <string name="kamar_mandi_luar">Kamar Mandi Luar</string>
    <string name="toilet_jongkok">Toilet Jongkok</string>
    <string name="toilet_duduk">Toilet Duduk</string>
    <string name="kamar_mandi_bak">Kamar Mandi Bak</string>
    <string name="kamar_mandi_shower">Shower</string>
    <string name="kamar_ac">Kamar AC</string>
    <string name="termasuk_listrik">Termasuk Listrik</string>
    <string name="lemari">Lemari</string>
    <string name="tempat_tidur">Tempat Tidur</string>
    <string name="deskripsi_kost">Deskripsi Kost</string>
    <string name="fasilitas_sekitar">Fasilitas Sekitar</string>
    <string name="dekat_dengan">Dekat dengan</string>
    <string name="peraturan_kost">Peraturan Kost</string>
    <string name="kapasitas_kost">Kapasitas Kost</string>
    <string name="mayoritas_penghuni">Mayoritas Penghuni</string>
    <string name="harga_kost">Harga Kost</string>
    <string name="perbulan">Perbulan</string>
    <string name="data_umum_kost">Data Umum Kost</string>
    <string name="alamat_dan_lokasi_kost">Alamat dan Lokasi Kost</string>
    <string name="foto_atau_video_kost">Foto atau Video Kost</string>
    <string name="x">X</string>
    <string name="Pilih_dari">Pilih dari</string>
    <string name="pilih_lokasi">PILIH LOKASI</string>
    <string name="simpan_data_kost">SIMPAN DATA KOST</string>
    <string name="Tekan_Sekali_Lagi_untuk_Keluar">Tekan Sekali Lagi untuk Keluar</string>
    <string name="belum_ada_kost">Belum Ada Kost</string>
    <string name="sewa_per">Sewa Per</string>
    <string name="misal_warung_dll">Misal : Warung, dll</string>
    <string name="misal_masjid_dll">Misal : Masjid, dll</string>
    <string name="Orang">[ Orang]</string>
    <string name="orang">" Orang"</string>
    <string name="umum">Umum</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hari">Hari</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="Lengkapi_Data_Umum_Kost">Lengkapi Data Umum Kost !</string>
    <string name="Tambahkan_Foto_atau_Video_Kost">Tambahkan Foto atau Video Kost !</string>
    <string name="Lengkapi_Data_Lokasi_Kost">Lengkapi Data Lokasi Kost !</string>
    <string name="Fasilitas_Bersama_Tidak_Ada">Fasilitas Bersama Tidak Ada !</string>
    <string name="Menyimpan_Data_Kost">Menyimpan Data Kost&#8230;</string>
    <string name="Mengunggah_Foto">Mengunggah Foto</string>
    <string name="dari">dari</string>
    <string name="Mengunggah_Video">Mengunggah Video</string>
    <string name="_0_km">0 km</string>
    <string name="selengkapnya"><![CDATA[SELENGKAPNYA >>]]></string>
    <string name="meter">" Meter"</string>
    <string name="_00_00">00:00</string>
    <string name="Tidak_Ada_Koneksi_Internet">Tidak Ada Koneksi Internet !</string>
    <string name="chat">Chat</string>
    <string name="bagikan">Bagikan</string>
    <string name="aktif_kapan">Aktif Kapan</string>
    <string name="_0_0">0.0</string>
    <string name="sisa_2_kamar">Sisa 2 Kamar</string>
    <string name="harga">Harga</string>
    <string name="rp_000_000">Rp. 000.000</string>
    <string name="_bulan">/bulan</string>
    <string name="pesan_kamar">Pesan Kamar</string>
    <string name="favorit">Favorit</string>
    <string name="ulasan_kost">Ulasan Kost</string>
    <string name="km">" km"</string>
    <string name="Belum_Login">Belum Login</string>
    <string name="Anda_Belum_Login__Login_Sekarang_">Anda Belum Login, Login Sekarang ?</string>
    <string name="geser_kiri_untuk_menghapus_favorit">Geser kiri untuk menghapus favorit</string>
    <string name="Daftar_Kost_Favorit_Anda">Daftar Kost Favorit Anda</string>
    <string name="Akun_Memfavoritkan_Kost_Anda">Akun Memfavoritkan Kost Anda</string>
    <string name="belum_ada_favorit">Belum Ada Favorit</string>
    <string name="Favorite_di_Hapus">Favorite di Hapus</string>
    <string name="URUNGKAN">URUNGKAN</string>
    <string name="API_KEY">AIzaSyBclYTOXtPLOkzBKeSIoKdDGhcpJQD4Nnk</string>
    <string name="sewa_kost_per">Sewa Kost Per</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="lihat_di_peta">Lihat di Peta</string>
    <string name="nomor_pemesanan">Nomor Pemesanan</string>
    <string name="kost1234567890">KOST1234567890</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="senin_5_juli_2021"><![CDATA[Senin, 5 Juli 2021 >]]></string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="bank_mandiri"><![CDATA[Bank Mandiri >]]></string>
    <string name="nomor_pembayaran">Nomor Pembayaran</string>
    <string name="bm123456789">BM123456789</string>
    <string name="nama_kamar">Nama Kamar</string>
    <string name="a1">A1</string>
    <string name="batalkan">Batalkan</string>
    <string name="chat_pemilik_kost">Chat Pemilik Kost</string>
    <string name="nama_pemesan_kost">Nama Pemesan Kost</string>
    <string name="lihat_kost_selengkapnya">Lihat Kost Selengkapnya</string>
    <string name="petunjuk_pembayaran">Petunjuk Pembayaran</string>
    <string name="pilih_alasan_pembatalan">Pilih Alasan Pembatalan</string>
    <string name="kamar_tidak_sesuai">Kamar Tidak Sesuai</string>
    <string name="fasilitas_tidak_sesuai">Fasilitas Tidak Sesuai</string>
    <string name="tidak_sesuai_deskripsi">Tidak Sesuai Deskripsi</string>
    <string name="alasan_lainnya">Alasan Lainnya</string>
    <string name="alasan_anda">Alasan Anda</string>
</resources>